--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -18,3 +18,16 @@ body {
   max-width: 320px;
   margin-bottom: 16px;
 }
+
+    li {
+      list-style-type: none;
+    }
+
+    .country-list_item {
+      display: flex;
+      align-items: center;
+    }
+    
+    .country-list__flag{
+      margin-right: 15px;
+    }
